# LongMemEval-V2

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-torch.txt  requirements.txt
data/: __init__.py  download_data.py  prepare_data.py  public_data.py  validate_data.py
evaluation/: __init__.py  harness.py  qa_eval_metrics.py  run_eval.py
evaluation/memory_configs/: agentrunbook_c.json  agentrunbook_r.json  codex.json  no_retrieval.json  rag_query_to_slice.json  rag_query_to_slice_notes.json
evaluation/scripts/: run_agentrunbook_c.sh  run_agentrunbook_c_v2.sh  run_agentrunbook_c_v2_enterprise_small.sh  run_agentrunbook_r.sh  run_codex.sh  run_no_retrieval.sh  run_rag_query_to_slice.sh  run_rag_query_to_slice_notes.sh
leaderboard/: README.md  build_submission_step_1_single_operating_point.py  build_submission_step_2_build_package.py  combine_aggregated_metrics.py  compute_lafs.py  submission_utils.py
memory_modules/: __init__.py  agentrunbook_c.py  agentrunbook_c_v2.py  agentrunbook_r.py  codex.py  memory.py  no_retrieval.py  oai_agents_sdk.py  rag.py  support.py  trajectory_store.py
memory_modules/assets/agentrunbook_c/: INSTRUCTION.md
memory_modules/assets/agentrunbook_c/scripts/: inspect_trajectory.py  render_trajectory_summary.py
